readme and changelog